2008-01-02  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst-libs/gst/audio/gstaudiofilter.c:
	(gst_audio_filter_class_init), (gst_audio_filter_get_unit_size):
	Implement get_unit_size() vmethod of GstBaseTransform.

2008-01-01  Edward Hervey  <edward.hervey@collabora.co.uk>

	* gst-libs/gst/pbutils/Makefile.am:
	* gst-libs/gst/pbutils/pbutils.h:
	Use glib-enum generator to have a proper enum GType for
	GST_TYPE_INSTALL_PLUGINS_RETURN so we can easily wrap it in bindings.

2007-12-31  David Schleef  <ds@schleef.org>

	* tests/check/Makefile.am:
	* tests/check/pipelines/theoraenc.c:
	  Reenable theoraenc test, which fails on the buildbot but
	  not locally.

2007-12-31  David Schleef  <ds@schleef.org>

	* docs/libs/.cvsignore:
	* docs/plugins/.cvsignore:
	  Add *-undeclared.txt to fix buildbot.

2007-12-31  David Schleef  <ds@schleef.org>

	* tests/check/Makefile.am:
	  Second attempt at disabling theoraenc test long enough to
	  get buildbot to compile -base.

2007-12-31  David Schleef  <ds@schleef.org>

	* tests/check/pipelines/theoraenc.c:
	  Disable theoraenc test long enough to get the buildbot to
	  compile a recent -base.

2007-12-31  Wim Taymans  <wim.taymans@collabora.co.uk>

	* tests/examples/seek/seek.c: (stop_cb):
	Make sure we reset the slider value to 0.0 without racing against a
	possible g_idle that sets it to something else.

2007-12-31  Thijs Vermeir  <thijsvermeir@gmail.com>

	* sys/ximage/ximagesink.c:
	fix typo

2007-12-30  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst-libs/gst/rtsp/gstrtspdefs.c: (rtsp_init_status):
	* gst-libs/gst/rtsp/gstrtspdefs.h:
	Add Location header so that we can start implementing redirects.
	See #506025.

2007-12-29  Thijs Vermeir  <thijsvermeir@gmail.com>

	* gst/subparse/gstssaparse.c:
	combine if's

2007-12-29  Thijs Vermeir  <thijsvermeir@gmail.com>

	* gst/subparse/gstssaparse.c:
	remove duplicate log message

2007-12-29  Sebastian Dröge  <slomo@circular-chaos.org>
